Added warped biome

--- a/packs/BP/feature_rules/smokey/warped_biome_builder.json
+++ b/packs/BP/feature_rules/smokey/warped_biome_builder.json
@@ -2,49 +2,39 @@
     "format_version": "1.13.0",
     "minecraft:feature_rules": {
         "description": {
-            "identifier": "smokey_space:corrupted_tree_feature",
-            "places_feature": "smokey_space:corrupted_tree"
+            "identifier": "smokey_space:warped_biome_builder",
+            "places_feature": "smokey_space:warped/warped_biome"
         },
         "conditions": {
-            "placement_pass": "surface_pass",
+            "placement_pass": "before_surface_pass",
             "minecraft:biome_filter": [
                 {
                     "any_of": [
                         {
                             "test": "has_biome_tag",
                             "operator": "==",
-                            "value": "frozen"
+                            "value": "jungle"
                         }
                     ]
                 }
             ]
         },
         "distribution": {
-            "iterations": 1,
-            "scatter_chance": {
-                "numerator": 1,
-                "denominator": 10
-            },
+            "iterations": 256,
             "x": {
                 "extent": [
-                    -15,
+                    0,
                     15
                 ],
-                "distribution": "uniform"
+                "distribution": "fixed_grid"
             },
-            "y": {
-                "extent": [
-                    64,
-                    100
-                ],
-                "distribution": "uniform"
-            },
+            "y": "q.above_top_solid(v.worldx, v.worldz)-1",
             "z": {
                 "extent": [
-                    -15,
+                    0,
                     15
                 ],
-                "distribution": "uniform"
+                "distribution": "fixed_grid"
             }
         }
     }
